--- a/package.json
+++ b/package.json
@@ -8,10 +8,12 @@
     "@testing-library/jest-dom": "^5.11.10",
     "@testing-library/react": "^11.2.6",
     "@testing-library/user-event": "^12.8.3",
+    "frisbee": "^3.1.4",
     "prop-types": "^15.7.2",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
     "react-scripts": "4.0.3",
+    "recoil": "^0.2.0",
     "styled-components": "^5.2.3",
     "web-vitals": "^1.1.1"
   },
